--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/icons-material": "^5.11.9",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-mic": "^12.4.6",
     "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
