--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
     "react-mic": "^12.4.6"
+  },
+  "scripts": {
+    "start": "node server/index.js",
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
