--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "heroku-postbuild": "npm install && npm run dev"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -15,7 +16,6 @@
     "@mui/material": "^5.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-mic": "^12.4.6",
     "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
