--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "socket.io-client": "^4.6.1",
     "express": "^4.18.2",
-    "socket.io": "^4.6.1"
+    "react-dom": "^18.2.0",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.1.0",
+    "express": "^4.18.2",
     "nodemon": "^2.0.20",
-    "express": "^4.18.2"
+    "vite": "^4.1.0"
   }
 }
