--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "Chat Multi Users application",
   "scripts": {
-    "dev:client": "cd client && npm run dev",
+    "start:client": "cd client && npm run dev",
     "build:client": "cd client && npm run build",
     "preview:client": "cd client && npm run preview",
-    "dev:server": "cd server && nodemon index.js",
+    "start:server": "cd server && node index.js",
     "heroku-postbuild": "npm install && npm audit fix"
   },
   "dependencies": {
