--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start:client": "cd client && npm run start",
     "build:client": "cd client && npm run build",
     "preview:client": "cd client && npm run preview",
-    "start:server": "cd server && node index.js",
+    "start:server": "cd server && nodemon index.js",
     "heroku-postbuild": "npm install && npm audit fix"
   },
   "dependencies": {
